--- a/nextflow.config
+++ b/nextflow.config
@@ -48,6 +48,8 @@ params {
     max_cpus                   = 16
     max_time                   = '240.h'
 
+    tracedir = "$projectDir/pipeline_info"
+
 }
 
 // include the base config file with process resource settings
@@ -127,19 +129,19 @@ env {
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+    file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
 }
 report {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
+    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
 }
 trace {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
+    file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
 }
 dag {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+    file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.html"
 }
 
 
