--- a/nextflow.config
+++ b/nextflow.config
@@ -64,6 +64,7 @@ profiles {
     }
     conda {
         conda.enabled          = true
+        conda.cacheDir         = "$projectDir/container.cache"
         docker.enabled         = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -82,6 +83,7 @@ profiles {
 
         docker {
         docker.enabled         = true
+        docker.cacheDir        = "$projectDir/container.cache"
         docker.userEmulation   = true
         conda.enabled          = false
         singularity.enabled    = false
@@ -97,6 +99,7 @@ profiles {
     singularity {
         singularity.enabled    = true
         singularity.autoMounts = true
+        singularity.cacheDir   = "$projectDir/container.cache"
         conda.enabled          = false
         docker.enabled         = false
         podman.enabled         = false
