push latest changes

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@
 params {
     // input reads
     //reads =  "$projectDir/data/fastq/SRR*_{1,2}.fastq.gz" // just one sample\
-    reads =  "$projectDir/data/fastq/SRR20707784_{1,2}.fastq.gz"
+    reads =  "$projectDir/test.data/raw/SRR20707784_{1,2}.fastq.gz"
 
     // output locations
     outdir = "$projectDir/test-run"
@@ -64,7 +64,7 @@ profiles {
     }
     conda {
         conda.enabled          = true
-        conda.cacheDir         = "$projectDir/container.cache"
+        conda.cacheDir         = "/wynton/group/krogan/mgordon/src/conda"
         docker.enabled         = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -83,7 +83,7 @@ profiles {
 
         docker {
         docker.enabled         = true
-        docker.cacheDir        = "$projectDir/container.cache"
+        docker.cacheDir        = "/wynton/group/krogan/mgordon/src/docker"
         docker.userEmulation   = true
         conda.enabled          = false
         singularity.enabled    = false
@@ -99,7 +99,7 @@ profiles {
     singularity {
         singularity.enabled    = true
         singularity.autoMounts = true
-        singularity.cacheDir   = "$projectDir/container.cache"
+        singularity.cacheDir   = "/wynton/group/krogan/mgordon/src/singularity"
         conda.enabled          = false
         docker.enabled         = false
         podman.enabled         = false
