batched alignment, calling and norm processes

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,8 +10,8 @@
 // Global default params, used in configs
 params {
     // input reads
-    //reads =  "$projectDir/data/fastq/SRR20707784_{1,2}.fastq.gz" // just one sample\
-    reads =  "$projectDir/test.data/raw/SRR20707784_{1,2}.fastq.gz"
+    reads =  "$projectDir/data/fastq/SRR20707784_{1,2}.fastq.gz" // just one sample\
+    //reads =  "$projectDir/test.data/raw/SRR20707784_{1,2}.fastq.gz"
 
     // output locations
     outdir = "$projectDir/test-run"
