process resources modified

--- a/conf/base.config
+++ b/conf/base.config
@@ -22,6 +22,7 @@ process {
     // Process-specific resource requirements
     // NOTE - Please try and re-use the labels below as much as possible.
     // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
+    // adjusted the time for process_high as long running in  pipeline
 
     withLabel:process_single {
         cpus   = { check_max( 1                  , 'cpus'    ) }
@@ -41,10 +42,12 @@ process {
     withLabel:process_high {
         cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
         memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
-        time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+        time   = { check_max( 92.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_long {
-        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
+        cpus   = { check_max( 12     * task.attempt, 'cpus'    ) }
+        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 92.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_high_memory {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
